Closed Bug 1597414 Opened 5 years ago Closed 4 years ago

Fix uses of mozilla::dom::ScreenOrientation::GetLockOrientationPermission in dom/base/ScreenOrientation.cpp

Categories

(Core :: DOM: Navigation, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla74
Fission Milestone M6
Tracking Status
firefox74 --- fixed

People

(Reporter: djvj, Assigned: tetsuharu)

References

(Blocks 1 open bug)

Details

(Whiteboard: [rm-docshell-tree-item:simple])

Attachments

(2 files)

In file dom/base/ScreenOrientation.cpp

Checks ItemType on document of owner window for ScreenOrientation.

ScreenOrientation is associated with nsScreen which hangs off of window anyway, so window should be in-process.

Just change ItemType to use BrowsingContext variant instead of nsIDocShellTreeItem variant.

Kannan says replacing nsIDocShellTreeItem calls should block enabling Fission in Nightly (M6).

Fission Milestone: --- → M6
Priority: -- → P3
Assignee: nobody → tetsuharu.ohzeki
Status: NEW → ASSIGNED
Attachment #9119964 - Attachment description: Bug 1597414 - part 1: Fix uses of nsIDocShellTreeItem in mozilla::dom::ScreenOrientation::GetLockOrientationPermission. → Bug 1597414 - Fix uses of nsIDocShellTreeItem in mozilla::dom::ScreenOrientation::GetLockOrientationPermission.
Pushed by tetsuharu.ohzeki@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/3884b282acc4
Fix uses of nsIDocShellTreeItem in mozilla::dom::ScreenOrientation::GetLockOrientationPermission. r=kmag
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla74
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: