Bug 1597414 - Fix uses of nsIDocShellTreeItem in mozilla::dom::ScreenOrientation::GetLockOrientationPermission. r=kmag

Differential Revision: https://phabricator.services.mozilla.com/D59453